# zed

./: Cargo.toml  README.md
assets/settings/: default.json
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs  element.rs  math_previews.rs
crates/inline_preiew/: Cargo.toml
crates/inline_preiew/src/: inline_preview.rs
crates/language/src/: buffer.rs  buffer_tests.rs  language.rs  language_registry.rs  language_settings.rs
crates/languages/src/markdown/: math_previews.scm
crates/languages/src/markdown-inline/: math_previews.scm
crates/multi_buffer/src/: multi_buffer.rs
crates/settings/src/: vscode_import.rs
crates/settings/src/settings_content/: language.rs
